Fix letter spacing

--- a/web/css/playground_style.css
+++ b/web/css/playground_style.css
@@ -158,7 +158,7 @@
 #mypageheader {
     font-size: 6vw;
     font-weight: 800;
-    letter-spacing: -0.05em;
+    letter-spacing: 0em;
     z-index: 10;
     text-align: center;
     position: relative;
@@ -221,7 +221,7 @@
     font-size: 4vw;
     font-weight: 500;
     color: #ffffff;
-    letter-spacing: -0.05em;
+    letter-spacing: 0em;
     z-index: 10;
     text-align: left;
     position: relative;
